test/testData/parser/negative/expressions/ref.err
test/testData/parser/negative/expressions/ref.c:3:15: error: cannot take the address of an rvalue of type 'signed int'
test/testData/parser/negative/expressions/ref.c:3:17: error: address of register variable requested
test/testData/parser/negative/expressions/ref.c:3:21: error: cannot take the address of an rvalue of type 'signed int'
test/testData/parser/negative/expressions/ref.c:3:26: error: cannot take the address of an rvalue of type 'signed int'
test/testData/parser/negative/expressions/ref.c:3:27: error: cannot take the address of an rvalue of type 'signed int'
test/testData/parser/negative/expressions/ref.c:3:29: error: cannot take the address of an rvalue of type 'float'
